<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World!</string>
    <string name="app_name">Teste3</string>

    <!-- First screen -->
    <string name="ButtonNext">Next</string>
    <string name="Client">Client</string>
    <string name="Server">Server</string>
    <string name="ModeSelector">Run this device as</string>
    <string name="ConnectSelector">Connect with</string>
    <string name="WifiMode">Wifi</string>
    <string name="BtMode">Bluetooth</string>
    
    <!-- Message/Username row -->
    <string name="Usr">Username</string>
    <string name="Rmv">Remove</string>
    
    <!-- Messages/Usernames -->
    <string name="Add">Add</string>
    
    <!-- Client wifi -->
    <string name="ButtonConnection">Connect</string>
    <string name="ButtonBack">Back</string>
    <string name="TextIP">Enter server IP</string>
    <string name="TextPort">Enter server port</string>
    <string name="ChoseUsr">Choose your username</string>
    
    <!-- Client bluetooth -->
    <string name="ScanButton">Lookup server</string>
    
    <!-- Client Conversation -->
    <string name="send">Send</string>
    <string name="option">Option</string>
    
    <!-- Client Conversation List-->
    <string name="contact">Contact</string>
    <string name="preview">Preview</string>
    <string name="date">Date</string>
    
    <!-- Server wifi -->
    <string name="SetPort">Set the server port</string>
    <string name="AdvancedSettings">Advanced Settings</string>
    <string name="BackButton">Back</string>
    <string name="ConnectionButton">Launch</string>
    
    <!-- Server Bluetooth -->
    <string name="DiscoverText">Set the server discoverability time</string>
    <string name="btServerOptionTitle">Bluetooth server settings</string>
    <string name="AdvancedSettingsButton">Advanced Settings</string>
    <string name="BtBack">Back</string>
    <string name="BtConnection">Make discoverable</string>
    <string name="BtNextBtn">Next</string>
    
    <!-- Server Options -->
    <string name="PassAuth">Password Authentification</string>
    <string name="IDAuth">ID Authentification</string>
    <string name="NoAuth">No Authentification</string>
    <string name="TextNbMax">Clients limit</string>
    <string name="TextNbMessMax">Messages limit (-1 for unlimited)</string>
    <string name="Option">Choose authentication mode</string>
    <string name="List">Allowed usernames</string>
    <string name="OkButton">Done</string>
    <string name="SetPasswd">Set password</string>
    
    <!-- Server view -->
    <string name="titleServ">Server running</string>
    <string name="ipServDesc">Ip of the server :</string>
    <string name="ipServ">Server ip :</string>
    <string name="portServDesc">Port of the server :</string>
    <string name="portServ">Port of the server</string>
    <string name="nbMaxClientDesc">Clients connected / slot available :</string>
    <string name="nbMaxClient">Max client</string>
    <string name="nbAwaitingClientDesc">Awaiting clients :</string>
    <string name="nbAwaitingClient">Awating client</string>
    
    <!-- Device list BT -->
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    
    <!-- Menu -->
    <string name="disconnectC">Disconnect client</string>
    <string name="disconnectS">Disconnect server</string>
    <string name="log">Show logs</string>
    <string name="delLog">Delete logs</string>
    
    <!-- Menu popup list-->
    <string name="delete">Delete this conversation</string>
    <string name="deleteMess">Delete this message</string>
    <string name="showConv">Show this conversation</string>

</resources>