<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/applicationModeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ModeSelector"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <RadioGroup
        android:id="@+id/modeSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/applicationModeTitle">

        <RadioButton
            android:id="@+id/serverRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Server" />

        <RadioButton
            android:id="@+id/clientRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Client" />
    </RadioGroup>

    <TextView
        android:id="@+id/connectionTypeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/modeSelector"
        android:text="@string/ConnectSelector"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/connectionSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connectionTypeTitle">

        <RadioButton
            android:id="@+id/wifiRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/WifiMode" />

        <RadioButton
            android:id="@+id/BtRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BtMode" />
    </RadioGroup>    
    
    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/ButtonNext" />

</RelativeLayout>