<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/LinearLayout01"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
		
		<TextView 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/contact"
			android:id="@+id/contact" 
			android:textSize="13sp"/>
		
		<TextView 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_below="@id/contact" 
			android:text="@string/preview"
			android:id="@+id/preview" 
			android:textSize="13sp"/>
			
		<TextView 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_alignParentRight="true" 
			android:layout_below="@id/contact" 
			android:text="@string/date"
			android:id="@+id/date" 
			android:textSize="13sp"/>
		

</RelativeLayout>
