<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/chooseUsernameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ChoseUsr" />

    <EditText
        android:id="@+id/usernameText"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chooseUsernameView"
        android:ems="10"/>

    <Button
        android:id="@+id/lookupServerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameText"
        android:layout_alignParentRight="true"
        android:text="@string/ScanButton" />
    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameText"
        android:layout_toLeftOf="@+id/lookupServerBtn"
        android:text="@string/ButtonBack" />

</RelativeLayout>